secondfile/objects/Service_Code_and_FIC_for_T1__c.object
<CustomObject>
    <fields>
        <fullName>CoS__c</fullName>
        <label>CoS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIC__c</fullName>
        <label>FIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBS__c</fullName>
        <label>SUBS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <label>Speed</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Service Code and FIC for T1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CoS__c</columns>
        <columns>FIC__c</columns>
        <columns>Service_Code__c</columns>
        <columns>Speed__c</columns>
        <columns>SUBS__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCFIC-{000000}</displayFormat>
        <label>Service Code and FIC for T1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Code and FIC for T1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>